[scheduler] Rename; update validator.