@@ -196,7 +196,7 @@ public enum TargetProperty {
      * compiled binary.
      */
     EXTERNAL_RUNTIME_PATH("external-runtime-path", PrimitiveType.STRING,
-            Arrays.asList(Target.CPP), (config, value, err) -> {
+            List.of(Target.CPP), (config, value, err) -> {
                 config.externalRuntimePath = ASTUtils.elementToSingleString(value);
             }),
 
@@ -1150,7 +1150,7 @@ public enum TargetProperty {
          * 
          * @param e      The element to type check.
          * @param name   The name of the target property.
-         * @param errors A list of errors to append to if problems are found.
+         * @param v      The validator to which any errors should be reported.
          */
         public void check(Element e, String name, LFValidator v) {
             if (!this.validate(e)) {
@@ -1313,8 +1313,8 @@ public enum TargetProperty {
      */
     public enum SchedulerOption {
         NP(false),         // Non-preemptive
-        NP2(false, List.of(
-            Path.of("scheduler_NP2.c"),
+        heuristic(false, List.of(
+            Path.of("scheduler_heuristic.c"),
             Path.of("worker_assignments.h"),
             Path.of("worker_states.h"),
             Path.of("data_collection.h")
